# Text-index-and-search

./: .gitignore  CMakeLists.txt  README.md  cmake_install.cmake  generate_corpus.py  indexer.cpp  searcher.cpp  ssearch.cpp
